2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* ArrayFieldsShouldNotBeReadOnlyTest.cs
	* MethodCallWithSubsetLinkDemandTest.cs
	* NativeFieldsShouldNotBeVisibleTest.cs
	* NonVirtualMethodWithInheritanceDemandTest.cs
	* SealedTypeWithInheritanceDemandTest.cs
	* SecureGetObjectDataOverridesTest.cs
	* StaticConstructorsShouldBePrivateTest.cs
	* TypeExposeFieldsTest.cs
	* TypeIsNotSubsetOfMethodSecurityTest.cs
	* TypeLinkDemandTest.cs:
		Updated unit tests wrt framework changes.

2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>

	* NativeFieldsShouldNotBeVisibleTest.cs: New. Unit tests by 
	Andreas Noever.
	* ArrayFieldsShouldNotBeReadOnlyTest.cs: New. Unit tests by 
	Andreas Noever.

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* StaticConstructorsShouldBePrivateTest.cs: New unit tests by 
	Daniel Abramov.
	* Test.Rules.Security.mdp: Add new unit tests to MD project.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Security.mdp: Update project file.

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.

2006-09-20  Jonathan Chambers  <joncham@gmail.com>

	* Test.Rules.Security.csproj: Make reference to nunit.framework
	not a specific version for portability.
	
2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Security.mdp: New. Project file for MonoDevelop.
	* NonVirtualMethodWithInheritanceDemandTest.cs: Made static methods
	public to avoid compiler warnings.

2006-03-01  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodCallWithSubsetLinkDemandTest.cs, 
	  NonVirtualMethodWithInheritanceDemandTest.cs, 
	  SealedTypeWithInheritanceDemandTest.cs:
		Conditions for success/failure were inverted when Gendarme 
		framework was updated.